--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dip"
-        android:gravity="center_vertical">
+        android:layout_margin="8dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/player_one"
-            android:textColor="#ffffff" />
+            android:textColor="#000000" />
 
         <ImageView
             android:id="@+id/imgPlayerOne"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:layout_marginLeft="4dip"
-            android:layout_marginRight="4dip"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:contentDescription="@string/imageview"
             android:scaleType="fitXY"
             android:src="@drawable/circle" />
@@ -32,12 +34,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_0"
-            android:textColor="#ffffff" />
+            android:textColor="#000000" />
 
         <LinearLayout
-            android:layout_width="0dip"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:orientation="horizontal"
             tools:ignore="UselessLeaf" />
 
         <TextView
@@ -45,14 +48,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_0"
-            android:textColor="#ffffff" />
+            android:textColor="#000000" />
 
         <ImageView
             android:id="@+id/imgPlayerTwo"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:layout_marginLeft="4dip"
-            android:layout_marginRight="4dip"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:contentDescription="@string/imageview"
             android:scaleType="fitXY"
             android:src="@drawable/cross" />
@@ -62,25 +65,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/player_two"
-            android:textColor="#ffffff" />
+            android:textColor="#000000" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#ffffff"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img1"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -89,10 +93,10 @@
 
             <ImageView
                 android:id="@+id/img2"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_marginLeft="4dip"
-                android:layout_marginRight="4dip"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -100,8 +104,8 @@
 
             <ImageView
                 android:id="@+id/img3"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -110,16 +114,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img4"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="4dip"
-                android:layout_marginBottom="4dip"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -128,12 +133,12 @@
 
             <ImageView
                 android:id="@+id/img5"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_marginLeft="4dip"
-                android:layout_marginTop="4dip"
-                android:layout_marginRight="4dip"
-                android:layout_marginBottom="4dip"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -141,10 +146,10 @@
 
             <ImageView
                 android:id="@+id/img6"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="4dip"
-                android:layout_marginBottom="4dip"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -153,14 +158,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img7"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -169,10 +175,10 @@
 
             <ImageView
                 android:id="@+id/img8"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
-                android:layout_marginLeft="4dip"
-                android:layout_marginRight="4dip"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
@@ -180,8 +186,8 @@
 
             <ImageView
                 android:id="@+id/img9"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="0.33"
                 android:background="#000000"
                 android:contentDescription="@string/imageview"
